--- a/src/components/style/contacto.css
+++ b/src/components/style/contacto.css
@@ -3,12 +3,12 @@
 }
 
 .container-contacto h2{
-    margin: 60px 0 40px 150px;
+    margin: 100px 0 40px 150px;
     font-family: "Segoe UI";
 }
 
 .icon{
-    margin: 10px 35px;
+    margin: 20px auto 70px auto;
     padding: 13px;
     font-size: 35px;
     border-radius: 50%;
@@ -22,4 +22,15 @@
 
 .info-contact p{
     font-size: 20px;
+}
+
+.container-flex-contact{
+    width: 50%;
+    margin: auto;
+    display: flex
+}
+
+.container-flex-contact div{
+    width: 100%;
+    text-align: center;
 }
