--- a/src/components/style/proyectos.css
+++ b/src/components/style/proyectos.css
@@ -9,17 +9,20 @@
 }
 
 .lista-proyectos{
-    width: 85%;
+    width: 90%;
     margin: 35px auto;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: repeat(2, 50%);
     font-family: 'Segoe UI';
     font-size: 17px;
 }
 
 .proyecto{
-    width: 100%;
-    margin: 0 10px;
+    width: 90%;
+    margin: 20px auto;
     border-radius: 20px;
+    box-shadow: 5px 5px 20px #111;
     padding: 15px;
     text-align: center;
     background: #333;
