Mejoras en el codigo

--- a/src/components/style/Info_personal.css
+++ b/src/components/style/Info_personal.css
@@ -4,6 +4,7 @@ main{
 
 .container-description{
     width: 70%;
+    min-height: 60vh;
     margin: 40px auto;
     padding: 20px;
     display: flex;
