--- a/src/components/style/proyectos.css
+++ b/src/components/style/proyectos.css
@@ -11,21 +11,27 @@
 .lista-proyectos{
     width: 90%;
     margin: 35px auto;
-    display: grid;
-    grid-template-columns: repeat(2, 50%);
-    grid-template-rows: repeat(2, 50%);
+    display: flex;
+    flex-wrap: wrap;
     font-family: 'Segoe UI';
     font-size: 17px;
 }
 
 .proyecto{
-    width: 90%;
+    width: 40%;
+    min-width: 500px;
+    height: 430px;
+    min-height: 430px;
     margin: 20px auto;
     border-radius: 20px;
     box-shadow: 5px 5px 20px #111;
     padding: 15px;
     text-align: center;
     background: #333;
+}
+
+.proyecto p{
+    text-align: left;
 }
 
 .proyecto img{
