--- a/src/components/style/conocimientos.css
+++ b/src/components/style/conocimientos.css
@@ -12,7 +12,7 @@
     width: 90%;
     margin: 40px auto;
     display: grid;
-    grid-template-columns: repeat(5, 250px);
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-template-rows: repeat(2, 200px) ;
 }
 
@@ -31,4 +31,36 @@
 .conocimiento img{
     width: 110px;
     height: 100px;
+}
+
+/*Version tablet*/
+
+@media screen and (max-width: 900px) {
+    .lista-conocimientos{
+        width: 100%;
+        padding: 60px 0 0 0;
+        text-align: center;
+    }
+
+    .lista-conocimientos h2{
+        margin: 0;
+    }
+
+    .container-grid{
+        margin: 60px auto;
+    }
+}
+
+
+/*Version movile*/
+
+@media screen and (max-width: 500px) {
+    .lista-conocimientos{
+        width: 100%;
+        text-align: center;
+    }
+
+    .lista-conocimientos h2{
+        margin: 0;
+    }
 }
