--- a/src/components/style/header.css
+++ b/src/components/style/header.css
@@ -2,6 +2,13 @@ html{
     scroll-behavior: smooth;
 }
 
+header{
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    top: 0;
+}
+
 body{
     background: #222831;
     color: #fff;
