--- a/src/components/style/proyectos.css
+++ b/src/components/style/proyectos.css
@@ -22,9 +22,9 @@
     min-width: 500px;
     height: 430px;
     min-height: 430px;
-    margin: 20px auto;
+    margin: 30px auto;
     border-radius: 20px;
-    box-shadow: 5px 5px 20px #111;
+    box-shadow: 1px 1px 11px #fff;
     padding: 15px;
     text-align: center;
     background: #333;
