--- a/src/components/style/header.css
+++ b/src/components/style/header.css
@@ -4,12 +4,17 @@ html{
 
 header{
     width: 100%;
-    height: 100px;
+    height: 60px;
+    background: #0F0E0E;
+    z-index: 100;
+    top: 0;
+    position: sticky;
 }
 
 body{
     color: #fff;
     margin: 0;
+    z-index: 1;
     background: #0F0E0E;
 }
 
@@ -21,6 +26,7 @@ body{
 
 .container-menu{
     width: 100%;
+    height: 100px;
     text-align: center;
     font-family: "Segoe UI";
 }
@@ -68,4 +74,10 @@ a{
     .container-menu{
         display: none;
     }
+
+    header{
+        position: relative;
+        z-index: -1;
+    }
+
 }
