--- a/src/components/style/proyectos.css
+++ b/src/components/style/proyectos.css
@@ -24,7 +24,7 @@
     min-height: 430px;
     margin: 30px auto;
     border-radius: 20px;
-    box-shadow: 1px 1px 11px #fff;
+    box-shadow: 2px 2px 11px #fff;
     padding: 15px;
     text-align: center;
     background: #333;
@@ -41,7 +41,7 @@
 }
 
 .link-proyecto{
-    width: 50%;
+    width: 40%;
     margin: 10px auto;
     padding: 8px;
     border-radius: 10px;
@@ -53,9 +53,14 @@
     background-color: #EEEEEE;
 }
 
+.botones_projects {
+    width: 100%;
+    display: flex;
+}
 
 .link-proyecto:hover{
-    background: #8B9A46;
+    background: #444;
+    color: #fff;
 }
 
 /*Version Tablet*/
